--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
