--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-notion": "^0.7.3",
+    "react-show-more-text": "^1.4.2",
     "swr": "^0.2.3"
   },
   "devDependencies": {
